# files2md

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/files2md/: __init__.py  cli.py  cli_impl.py  fileinfo.py  filespecs.py  md_transform.py  transform.py
src/files2md/cli/: __init__.py  __main__.py  arg.py  cli_args.py  cli_impl.py  gitutil.py  humansize.py  impl.py  msg.py
tests/: gitutil_test.py  humansize_test.py
