[project]
name = "files2md"
version = "1.0.2"
description = "Create markdown from a collection of files."
authors = [{ name = "Mike Clark", email = "mike.clark.8192@gmail.com" }]
dependencies = [
    "pathspec>=0.12.1",
    # "setuptools>=69.2.0",
    # "wheel>=0.43.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
extras = ["charset-normalizer>=3.3.2"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
files2md = "files2md.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["debugpy>=1.8.1", "pytest>=8.1.1"]

[tool.pyright]
exclude = ["build/**", ".venv/**"]
