[project]
name = "files2md"
version = "1.0.2"
description = "Create markdown from a collection of files."
authors = [{ name = "Mike Clark", email = "mike.clark.8192@gmail.com" }]
dependencies = ["pathspec>=0.12.1"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
extras = ["charset-normalizer>=3.3.2"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
files2md = "files2md.cli.__main__:main"

[tool.pyright]
exclude = ["build/**", ".venv/**"]

[dependency-groups]
dev = ["autoflake>=2.3.1", "debugpy>=1.8.17", "pytest>=8.4.2"]
